First working version

--- a/SafariOmnibar/SafariOmnibar-Info.plist
+++ b/SafariOmnibar/SafariOmnibar-Info.plist
@@ -23,8 +23,19 @@
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2011 Dailymotion. All rights reserved.</string>
+	<string>Copyright © 2011 Olivier Poitrey. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
-	<string></string>
+	<string>SafariOmnibar</string>
+	<key>SIMBLTargetApplications</key>
+	<array>
+		<dict>
+			<key>BundleIdentifier</key>
+			<string>com.apple.Safari</string>
+			<key>MaxBundleVersion</key>
+			<string>7534</string>
+			<key>MinBundleVersion</key>
+			<string>6533</string>
+		</dict>
+	</array>
 </dict>
 </plist>
